# AdvancedDatabaseOrganization

./: CMakeLists.txt  README.md
assign1/: dberror.c  storage_mgr.c  test_assign1
assign2/: Makefile  buffer_mgr.c  buffer_mgr.h  makefile  test_assign2_1  test_assign2_1.c  test_assign2_2
assign3/: Makefile  buffer_mgr.c  buffer_mgr.h  record_mgr.c  record_mgr.h  rm_serializer.c  storage_mgr.c  tables.h  test_assign3_1  test_table_r  test_table_t
assign4/: Makefile  btree_mgr.c  btree_mgr.h  record_mgr.c  storage_mgr.c
